--- a/public/sidebar.css
+++ b/public/sidebar.css
@@ -42,6 +42,13 @@ html, body, #app, .container-fluid {
   box-shadow: 5px 5px 7px #888888;
 }
 
+#content {
+  background-color: white;
+  outline-style: solid;
+  outline-color: blue;
+  box-shadow: 5px 5px 7px #888888;
+}
+
 #logo {
   font-size: 24px;
 }
