--- a/public/style.css
+++ b/public/style.css
@@ -38,7 +38,13 @@ html, body, #app, #app>div {
 #sidebar {
   background-color: white;
   outline-style: solid;
-  outline-color: blue;
+  box-shadow: 5px 5px 7px #888888;
+}
+
+#content {
+  background-color: white;
+  outline-style: solid;
+  /*outline-color: light-gray;*/
   box-shadow: 5px 5px 7px #888888;
 }
 
