--- a/public/style.css
+++ b/public/style.css
@@ -13,15 +13,15 @@ html, body, #app, #app>div {
   outline:none
 }
 
-.nav-link:hover {
+/*.nav-link:hover {
   color: black;
   text-decoration: none;
-}
+}*/
 
-.nav-link:active {
+/*.nav-link:active {
   color: black;
   text-decoration: none;
-}
+}*/
 
 .vertical-center {
   display: flex;
