--- a/public/style.css
+++ b/public/style.css
@@ -35,15 +35,15 @@ html, body, #app, #app>div {
   margin: 0 15px;
 }*/
 
-#sidebar {
-  background-color: white;
-  outline-style: solid;
-  box-shadow: 5px 5px 7px #888888;
-}
+/*#sidebar {*/
+  /*background-color: white;*/
+  /*outline-style: solid;*/
+  /*box-shadow: 5px 5px 7px #888888;*/
+/*}*/
 
 #content {
   background-color: white;
-  outline-style: solid;
+  /*outline-style: solid;*/
   /*outline-color: light-gray;*/
   box-shadow: 5px 5px 7px #888888;
 }
