--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,18 @@
 html, body, #app, #app>div {
-  height: 100%
+  height: 100%;
+  /*background-color:black;
+  background-image:
+  radial-gradient(white, rgba(255,255,255,.2) 2px, transparent 40px),
+  radial-gradient(white, rgba(255,255,255,.15) 1px, transparent 30px),
+  radial-gradient(white, rgba(255,255,255,.1) 2px, transparent 40px),
+  radial-gradient(rgba(255,255,255,.4), rgba(255,255,255,.1) 2px, transparent 30px);
+  background-size: 550px 550px, 350px 350px, 250px 250px, 150px 150px;
+  background-position: 0 0, 40px 60px, 130px 270px, 70px 100px;*/
 }
+
+/*body {
+  background-image: url('lines2.jpg');
+}*/
 
 .container-fluid {
   height: 100%
@@ -42,12 +54,17 @@ html, body, #app, #app>div {
 /*}*/
 
 #content {
-  background-color: white;
+  background-color: #eae8e8;
+  /*background-color: #f5f5f5;*/
   /*outline-style: solid;*/
   /*outline-color: light-gray;*/
   box-shadow: 5px 5px 7px #888888;
 }
 
 #logo {
+  font-size: 24px;
+}
+
+p {
   font-size: 24px;
 }
